--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
       </figure>
       
 		</aside>
+
+    <div class="button-group">
+      <button class="button">Button1</button>
+      <button class="button">Button2</button>
+
 	</main>
 
 	<footer>
