--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>DISCOVER</h2>
 				<h3>OUR STORY</h3>
         
-        <div class="introtext">
+        <div>
         <figure>
         <img src="./assets/images/Star.png" alt="star graphic">
       </figure>
